--- a/templates/homeArchive.html
+++ b/templates/homeArchive.html
@@ -7,7 +7,10 @@
 {% block content %}
     <div class="post">
         {% set section = get_section(path="blog/_index.md") %}
-
         {{ post_macros::list_posts(pages=section.pages) }}
+
+        <br>
+        <img src="images/_birb.png" style="position: center; width: 40vh;">
     </div>
 {% endblock content %}
+
