remove underscore prefix for site assets

--- a/templates/homeArchive.html
+++ b/templates/homeArchive.html
@@ -10,7 +10,7 @@
         {{ post_macros::list_posts(pages=section.pages) }}
 
         <br>
-        <img src="images/_birb.png" style="position: center; width: 40vh;">
+        <img src="images/birb.png" style="position: center; width: 40vh;">
     </div>
 {% endblock content %}
 
