--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,9 +13,17 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
+  
+  // custom
+  // font-family: liturgisch, serif; // edit this line for fonts
+  // font-size: 1.5rem;
+  // line-height: 1.0;
+  // font-weight: lighter;
+
+  font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace; // edit this line for fonts
   font-size: 1rem;
   line-height: 1.54;
+
   background-color: var(--background);
   color: var(--color);
   text-rendering: optimizeLegibility;
