--- a/sass/font-misc.scss
+++ b/sass/font-misc.scss
@@ -7,3 +7,8 @@
   font-family: "Hohenzollern"; 
   src: url("fonts/Hohenzollern.ttf") format("truetype");
 }
+
+@font-face {
+  font-family: "TypographerTextur"; 
+  src: url("fonts/TypographerTextur.otf") format("opentype");
+}
