--- a/sass/header.scss
+++ b/sass/header.scss
@@ -26,7 +26,9 @@
   &__logo {
     display: flex;
     flex: 1;
-
+    // font-family: 'TypographerTextur', sans-serif; 
+    // font-size: xx-large;
+    // Changed above line to change logo font title font header font
     // &:after {
     //   content: '';
     //   background: repeating-linear-gradient(90deg, var(--accent), var(--accent) 2px, transparent 0, transparent 16px);
